sort.basic.lessons.sort.basic.bubble.AlgBubbleSort2.scala.error
AlgBubbleSort2:15: error: ')' expected but '}' found.
		}
                ^AlgBubbleSort2:16: error: ';' expected but ')' found.
	)}
        ^