sort.basic.lessons.sort.basic.bubble.AlgBubbleSort2.scala.code
def bubbleSort2() {
	var swap = false
	while (swap) {
		swap = false;
		var n = 0;
		for (i <- 0 to (getNombreValeurs-2-n)) {
			if (n == getNombreValeurs) {
				n = n + 2
			}
			if (plusPetit((i+1),i) {
				echange(i,(i+1))
				n = n + 1
			}
		}
	)}
}
